@@ -43,17 +43,19 @@ import hudson.security.ACLContext;
 import hudson.security.AccessControlled;
 import hudson.util.AlternativeUiTextProvider;
 import hudson.util.AlternativeUiTextProvider.Message;
-import hudson.util.AtomicFileWriter;
 import hudson.util.FormValidation;
-import hudson.util.IOUtils;
 import hudson.util.Secret;
+import hudson.util.XStream2;
+import hudson.widgets.Widget;
 import io.jenkins.servlet.ServletExceptionWrapper;
 import jakarta.servlet.ServletException;
+import java.io.ByteArrayOutputStream;
 import java.io.File;
 import java.io.IOException;
 import java.io.OutputStream;
-import java.nio.charset.Charset;
-import java.nio.file.Files;
+import java.io.StringReader;
+import java.io.StringWriter;
+import java.nio.charset.StandardCharsets;
 import java.util.Collection;
 import java.util.List;
 import java.util.ListIterator;
@@ -69,7 +71,7 @@ import jenkins.model.Jenkins;
 import jenkins.model.Loadable;
 import jenkins.model.queue.ItemDeletion;
 import jenkins.security.ExtendedReadRedaction;
-import jenkins.security.NotReallyRoleSensitiveCallable;
+import jenkins.security.XStreamNotDeserializable;
 import jenkins.security.stapler.StaplerNotDispatchable;
 import jenkins.util.SystemProperties;
 import jenkins.util.xml.XMLUtils;
@@ -113,6 +115,7 @@ public abstract class AbstractItem extends Actionable implements Loadable, Item,
     /**
      * Project name.
      */
+    @XStreamNotDeserializable
     protected /*final*/ transient String name;
 
     /**
@@ -120,6 +123,7 @@ public abstract class AbstractItem extends Actionable implements Loadable, Item,
      */
     protected volatile String description;
 
+    @XStreamNotDeserializable
     private transient ItemGroup parent;
 
     protected String displayName;
@@ -129,6 +133,7 @@ public abstract class AbstractItem extends Actionable implements Loadable, Item,
         doSetName(name);
     }
 
+    @NonNull
     @Override
     @Exported(visibility = 999)
     public String getName() {
@@ -470,6 +475,7 @@ public abstract class AbstractItem extends Actionable implements Loadable, Item,
     @Override
     public abstract Collection<? extends Job> getAllJobs();
 
+    @NonNull
     @Override
     @Exported
     public final String getFullName() {
@@ -545,7 +551,11 @@ public abstract class AbstractItem extends Actionable implements Loadable, Item,
             }
             List<Ancestor> ancestors = req.getAncestors();
             if (!ancestors.isEmpty()) {
-                Ancestor last = ancestors.get(ancestors.size() - 1);
+                Ancestor last = ancestors.getLast();
+                if (last.getObject() instanceof Widget) {
+                    // likely loaded via ajax so get the previous one which should be the view
+                    last = last.getPrev();
+                }
                 if (last.getObject() instanceof View view) {
                     if (view.getOwner().getItemGroup() == getParent() && !view.isDefault()) {
                         // Showing something inside a view, so should use that as the base URL.
@@ -882,10 +892,13 @@ public abstract class AbstractItem extends Actionable implements Loadable, Item,
         checkPermission(EXTENDED_READ);
         XmlFile configFile = getConfigFile();
         if (hasPermission(CONFIGURE)) {
-            IOUtils.copy(configFile.getFile(), os);
+            Items.XSTREAM2.toXMLUTF8(this, os);
         } else {
+            var baos = new ByteArrayOutputStream();
+            Items.XSTREAM2.toXMLUTF8(this, baos);
+            String xml = baos.toString(StandardCharsets.UTF_8);
+
             String encoding = configFile.sniffEncoding();
-            String xml = Files.readString(Util.fileToPath(configFile.getFile()), Charset.forName(encoding));
 
             for (ExtendedReadRedaction redaction : ExtendedReadRedaction.all()) {
                 LOGGER.log(Level.FINE, () -> "Applying redaction " + redaction.getClass().getName());
@@ -912,42 +925,33 @@ public abstract class AbstractItem extends Actionable implements Loadable, Item,
      *               sources may not be handled.
      * @since 1.473
      */
+    @SuppressWarnings("unchecked")
     public void updateByXml(Source source) throws IOException {
         checkPermission(CONFIGURE);
         XmlFile configXmlFile = getConfigFile();
-        final AtomicFileWriter out = new AtomicFileWriter(configXmlFile.getFile());
+        final StringWriter out = new StringWriter();
         try {
-            try {
-                XMLUtils.safeTransform(source, new StreamResult(out));
-                out.close();
-            } catch (TransformerException | SAXException e) {
-                throw new IOException("Failed to persist config.xml", e);
-            }
-
-            // try to reflect the changes by reloading
-            Object o = new XmlFile(Items.XSTREAM, out.getTemporaryPath().toFile()).unmarshalNullingOut(this);
-            if (o != this) {
-                // ensure that we've got the same job type. extending this code to support updating
-                // to different job type requires destroying & creating a new job type
-                throw new IOException("Expecting " + this.getClass() + " but got " + o.getClass() + " instead");
-            }
-
-            Items.whileUpdatingByXml(new NotReallyRoleSensitiveCallable<Void, IOException>() {
-                @Override public Void call() throws IOException {
-                    onLoad(getParent(), getRootDir().getName());
-                    return null;
-                }
-            });
-            Jenkins.get().rebuildDependencyGraphAsync();
-
-            // if everything went well, commit this new version
-            out.commit();
-            SaveableListener.fireOnChange(this, getConfigFile());
-            ItemListener.fireOnUpdated(this);
-
-        } finally {
-            out.abort(); // don't leave anything behind
+            XMLUtils.safeTransform(source, new StreamResult(out));
+            out.close();
+        } catch (TransformerException | SAXException e) {
+            throw new IOException("Failed to process config.xml", e);
         }
+
+        // try to reflect the changes by reloading
+        Object o = Items.XSTREAM2.unmarshal(XStream2.getDefaultDriver().createReader(new StringReader(out.getBuffer().toString())), this, null, true);
+        if (o != this) {
+            // ensure that we've got the same job type. extending this code to support updating
+            // to different job type requires destroying & creating a new job type
+            throw new IOException("Expecting " + this.getClass() + " but got " + o.getClass() + " instead");
+        }
+
+        Items.runWhileUpdatingByXml(() -> onLoad(getParent(), getRootDir().getName()));
+        Jenkins.get().rebuildDependencyGraphAsync();
+
+        // if everything went well, re-serialize from memory to encrypt secrets submitted in plaintext
+        configXmlFile.write(this);
+        SaveableListener.fireOnChange(this, getConfigFile());
+        ItemListener.fireOnUpdated(this);
     }
 
     /**
@@ -965,18 +969,13 @@ public abstract class AbstractItem extends Actionable implements Loadable, Item,
     }
 
     @Override
+    @SuppressWarnings("unchecked")
     public void load() throws IOException {
         checkPermission(CONFIGURE);
 
         // try to reflect the changes by reloading
         getConfigFile().unmarshal(this);
-        Items.whileUpdatingByXml(new NotReallyRoleSensitiveCallable<Void, IOException>() {
-            @Override
-            public Void call() throws IOException {
-                onLoad(getParent(), getParent().getItemName(getRootDir(), AbstractItem.this));
-                return null;
-            }
-        });
+        Items.runWhileUpdatingByXml(() -> onLoad(getParent(), getParent().getItemName(getRootDir(), this)));
         Jenkins.get().rebuildDependencyGraphAsync();
     }
 
